--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,10 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    -->
+    <script src="https://chat-assets.frontapp.com/v1/chat.bundle.js"></script>
+    <script>
+      window.FrontChat('init', {chatId: '355cc768bb32c7cedb2678006e23faf8', useDefaultLauncher: true});
+    </script>
+    </body>
 </html>
